# Gym-LBunker-Tauri

./: index.html  package-lock.json  package.json  postcss.config.cjs  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  gimnasio.db  tauri.conf.json
src-tauri/src/: main.rs
src/components/: BannerButtoms.tsx  tableClients.tsx
src/components/Modales/: ModalCliente.tsx  ModalIngresarCliente.tsx  ModalVerificarCliente.tsx
src/components/icons/: IconSend.tsx
src/constans/: types.ts
src/hooks/: newUserSlice.ts  obtenerUserUID.ts  sliceMembers.ts  sliceModal.ts  store.ts  usersSlice.ts
src/screens/: HomeScreen.tsx
