[package]
name = "gym-lbunker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "gym_lbunker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
actix-web = "4.0"
uuid = { version = "1.3", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
